--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 .parallex,.parallex1{
-    background-image: url(https://assets.telegraphindia.com/telegraph/75806dfd-8ac7-4887-a066-17d39104cf1f.jpg);
+    background-image: url(shopping.jpg);
     height:max-content;
     background-attachment:fixed;
     background-position:center;
